@@ -58,6 +58,9 @@
   option.
   [kdeldycke]
 
+- Allow the creation of multiple custom milestones.
+  [kdeldycke]
+
 
 0.2.3 (2010-04-24)
 ==================
